# J2H

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build-libheif.yml  build.yml
app/: build.gradle.kts  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libheif_bridge.cpp  libheif_bridge_stub.cpp  rgb16_to_p010.cpp
app/src/main/cpp/include/libheif/: heif_version.h
app/src/main/java/com/wjbyt/j2h/: MainActivity.kt
app/src/main/java/com/wjbyt/j2h/exif/: DngExifExtractor.kt  ExifTiffBuilder.kt  JpegExifExtractor.kt
app/src/main/java/com/wjbyt/j2h/heif/: HeicConverter.kt  HeicMetadataRepair.kt  HeifContainerWriter.kt  HeifDumper.kt  HeifExifInjector.kt  HeifExifStructVerifier.kt  HeifGridContainerWriter.kt  HevcParser.kt  LibheifEncoder.kt  MediaStoreSync.kt  TenBitEncoder.kt  TenBitGridEncoder.kt  ThumbnailGenerator.kt
app/src/main/java/com/wjbyt/j2h/storage/: TreeUriStore.kt
app/src/main/java/com/wjbyt/j2h/ui/: HomeScreen.kt
app/src/main/java/com/wjbyt/j2h/video/: Mp4MetadataInjector.kt  VideoTranscoder.kt
app/src/main/java/com/wjbyt/j2h/work/: ConversionForegroundService.kt  JpgScanner.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
